--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "webpack serve --mode development --config webpack.config.js",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
